# gimlet

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  debugAdapter.js  eslint.config.mjs  extension.js  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-prerelease.yml  publish.yml
docs/: amendments.md  input-for-ledger-tool.md  install-run.md  quick-config-hardening.md
example-project/anchor-example/: Anchor.toml
example-project/solana_test_extension/: Cargo.toml
example-project/solana_test_extension/src/: lib.rs
examples/anchor-example/: Anchor.toml  package-lock.json  package.json  wallet.json
examples/anchor-multi-program/: Anchor.toml  package-lock.json  wallet.json
examples/anchor-nested-functions/: Anchor.toml  package-lock.json  package.json  wallet.json
examples/anchor-nested-functions/programs/anchor-nested-functions/: Cargo.toml
examples/anchor-nested-functions/programs/anchor-nested-functions/src/: lib.rs
examples/anchor-nested-functions/programs/anchor-nested-functions/src/instructions/: initialize.rs  mod.rs  multiply.rs
examples/solana_test_extension/: wallet.json
scripts/: gimlet-setup.sh  pre-setup.sh
solana-test-program/: .gitignore  Cargo.toml
solana-test-program/src/: main.rs
src/: config.js  debug.js  extension.js  logger.js  projectStructure.js  utils.js
src/lens/: gimletCodeLensProvider.js
src/managers/: debugConfigManager.js  portManager.js  sessionManager.js  stateMonitor.js  statusBarManager.js  treeView.js  vscodeSettingsManager.js
(+34 files in other folders)
